# takp

./: .gitmodules  .travis.yml  README.md  dps.py  launcher.sh  loot_table.sh  skillup.sh
dps/: CMakeLists.txt  README.md  action.c  action.h  array.c  array.h  battle.c  battle.h  config.c  config.h  date.c  date.h  dps.c  system.h.in  tail.c  tail.h  test-action.c  test-array.c  test-battle.c  test-date.c  test-tail.c  test-utility.c  test.c  test.h  travis-build.sh  utility.c  utility.h
dps++/: CMakeLists.txt  README.md  action.cpp  action.h  array.cpp  array.h  battle.c  battle.cpp  battle.h  config.cpp  config.h  date.cpp  date.h  dps.cpp  system.h.in  tail.cpp  tail.h  test-action.cpp  test-array.c  test-battle.cpp  test-date.c  test-date.cpp  test-tail.cpp  test.h  utility.cpp  utility.h
dps++/sample-logs/: death.txt  heal.txt  magic.txt  special-damage.txt
dps/sample-logs/: enchilada.txt  finishing-blow.txt  heal.txt  special-damage.txt  special-magic.txt  tiny.txt
launcher/: CMakeLists.txt  context.cpp  context.h  display.cpp  display.h  main.cpp  window.cpp  window.h
takpw/: CMakeLists.txt  d3d8main.c  globals.h  log.h  main.cpp  takpw.c  takpw.cpp  takpw.h  toolchain-mingw.cmake  version.rc
